--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="../style/index.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h3>title</h3>
+    </header>
+    <section id="title">
+        <div class="container">
+            <h2>Mike Lovell</h2>
+            <div>
+                <h1>Mike Lovell</h1>
+                <a href="#myProjects" class="button">My Projects</a>
+                <img src="https://picsum.photos/200" alt="my photo">
+                <nav>
+                    <a href="#home">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#projects">My Projects</a>
+                    <a href="#contact">Contact</a>
+                </nav>
+            </div>
+        </div>
+    </section>
+    <section id="gallery">
+        <div class="pics">
+            <div>
+                <img src="https://picsum.photos/200" alt="photo">
+                <p>title of a</p>
+            </div>
+            <div>
+                <img src="https://picsum.photos/200" alt="photo">
+                <p>project might</p>
+            </div>
+            <div>
+                <img src="https://picsum.photos/200" alt="photo">
+                <p>go here</p>
+            </div>
+            <div>
+                <img src="https://picsum.photos/200" alt="photo">
+                <p>cool thing</p>
+            </div>
+            <div>
+                <img src="https://picsum.photos/200" alt="photo">
+                <p>fun thing</p>
+            </div>
+            <div>
+                <img src="https://picsum.photos/200" alt="photo">
+                <p>spicy thing</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div> 
+            <a href="#contact" class="button">Contact</a>
+        </div>
+    </footer>
     
 </body>
 </html>
+<button></button>
