--- a/index.html
+++ b/index.html
@@ -8,55 +8,64 @@
 </head>
 <body>
     <header>
-        <h3>title</h3>
+        <div>
+        <h3>site title</h3>
+        </div>  
     </header>
     <section id="title">
         <div class="container">
             <h2>Mike Lovell</h2>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="../about.html">About</a>
+                <a href="../projects.html">My Projects</a>
+                <a href="../contact.html">Contact</a>
+            </nav>
+            <div class="big-img">
             <div>
                 <h1>Mike Lovell</h1>
-                <a href="#myProjects" class="button">My Projects</a>
-                <img src="https://picsum.photos/200" alt="my photo">
-                <nav>
-                    <a href="#home">Home</a>
-                    <a href="#about">About</a>
-                    <a href="#projects">My Projects</a>
-                    <a href="#contact">Contact</a>
-                </nav>
+                <a href="../projects.html" class="button">My Projects</a>            
             </div>
+            <img src="https://picsum.photos/250" alt="">
+        </div>
         </div>
     </section>
     <section id="gallery">
         <div class="pics">
             <div>
-                <img src="https://picsum.photos/200" alt="photo">
+                <img src="https://picsum.photos/150" alt="photo">
                 <p>title of a</p>
             </div>
             <div>
-                <img src="https://picsum.photos/200" alt="photo">
+                <img src="https://picsum.photos/150" alt="photo">
                 <p>project might</p>
             </div>
             <div>
-                <img src="https://picsum.photos/200" alt="photo">
+                <img src="https://picsum.photos/150" alt="photo">
                 <p>go here</p>
             </div>
             <div>
-                <img src="https://picsum.photos/200" alt="photo">
+                <img src="https://picsum.photos/150" alt="photo">
                 <p>cool thing</p>
             </div>
             <div>
-                <img src="https://picsum.photos/200" alt="photo">
+                <img src="https://picsum.photos/150" alt="photo">
                 <p>fun thing</p>
             </div>
             <div>
-                <img src="https://picsum.photos/200" alt="photo">
+                <img src="https://picsum.photos/150" alt="photo">
                 <p>spicy thing</p>
             </div>
         </div>
     </section>
     <footer>
         <div> 
-            <a href="#contact" class="button">Contact</a>
+            <a href="../contact.html" class="button">Contact</a>
+            <div class="socials">
+                <a href="insta">insta</a>
+                <a href="twitter">twitter</a>
+                <a href="linkdin">linkdin</a>
+            </div>
         </div>
     </footer>
     
