finished both sizes of accessibility

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header>
         <nav>
             <h1>MIKE LOVELL</h1>
-            <links>
+            <!-- <links> -->
                 <button><a href="../index.html">Home</a></button>
                 <button><a href="../about.html">About</a></button>
                 <button><a href="../projects.html">My Projects</a></button>
                 <button><a href="../contact.html">Contact</a></button>
-                </links>
+                <!-- </links> -->
             </nav>
     </header>
     <section class="top">
@@ -39,8 +39,7 @@
                 <img src="https://picsum.photos/400" alt="photo">
                 <p>go here</p>
             </div>
-        </div>
-        <div class="row2">
+        
             <div class="port">
                 <img src="https://picsum.photos/400" alt="photo">
                 <p>cool thing</p>
